--- a/sdk/identity/identity/package.json
+++ b/sdk/identity/identity/package.json
@@ -92,8 +92,8 @@
     "@azure/core-tracing": "workspace:*",
     "@azure/core-util": "workspace:*",
     "@azure/logger": "workspace:*",
-    "@azure/msal-browser": "^3.26.1",
-    "@azure/msal-node": "^2.15.0",
+    "@azure/msal-browser": "catalog:identity",
+    "@azure/msal-node": "catalog:identity",
     "events": "^3.0.0",
     "jws": "^4.0.0",
     "open": "^8.0.0",
