--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -196,3 +196,7 @@ catalogs:
     '@opentelemetry/sdk-trace-node': ^1.27.0
     '@opentelemetry/semantic-conventions': ^1.27.0
     '@opentelemetry/winston-transport': ^0.7.0
+  identity:
+    '@azure/msal-browser': ^3.26.1
+    '@azure/msal-node': ^2.15.0
+    '@azure/msal-node-extensions': ^1.3.0
