--- a/sdk/identity/identity-cache-persistence/package.json
+++ b/sdk/identity/identity-cache-persistence/package.json
@@ -57,8 +57,8 @@
   "dependencies": {
     "@azure/core-auth": "workspace:*",
     "@azure/identity": "workspace:*",
-    "@azure/msal-node": "^2.15.0",
-    "@azure/msal-node-extensions": "^1.3.0",
+    "@azure/msal-node": "catalog:identity",
+    "@azure/msal-node-extensions": "catalog:identity",
     "keytar": "^7.6.0",
     "tslib": "catalog:"
   },
