--- a/sdk/eventhub/event-hubs/samples-express/package.json
+++ b/sdk/eventhub/event-hubs/samples-express/package.json
@@ -33,6 +33,7 @@
     "@azure/event-hubs": "^5.12.0",
     "@azure/abort-controller": "^2.1.2",
     "@azure/identity": "^4.3.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "uuid": "^8.3.1"
   },
