Agent CRUD tests and sample

--- a/sdk/ai/azure-ai-projects/tsconfig.json
+++ b/sdk/ai/azure-ai-projects/tsconfig.json
@@ -6,10 +6,5 @@
     "rootDir": ".",
     "skipLibCheck": true
   },
-  "include": [
-    "./src/**/*.ts",
-    "./src/**/*.mts",
-    "./src/**/*.cts",
-    "test/**/*.ts"
-  ]
+  "include": ["./src/**/*.ts", "./src/**/*.mts", "./src/**/*.cts", "test/**/*.ts", "src/**/*.ts", "samples-dev/**/*.ts"]
 }
