--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,5 +36,6 @@
     "**/*.d.ts": true,
     "**/test-browser/*": true
   },
-  "typescript.tsdk": "./sdk/core/core-rest-pipeline/node_modules/typescript/lib"
+  "typescript.tsdk": "./sdk/core/core-rest-pipeline/node_modules/typescript/lib",
+  "vitest.vitestPackagePath": "sdk/core/core-rest-pipeline/node_modules/vitest/package.json"
 }
