--- a/sdk/cosmosdb/cosmos/tsconfig.strict.json
+++ b/sdk/cosmosdb/cosmos/tsconfig.strict.json
@@ -223,6 +223,8 @@
     "test/public/integration/nonStreamingOrderBy/nonStreamingOrderBy.spec.ts",
     "test/public/integration/nonStreamingOrderBy/nonStreamingDistinctOrderBy.spec.ts",
     "test/public/integration/client.retry.spec.ts",
+    "test/public/integration/fullTextSearch.spec.ts",
+    "test/public/integration/text-3properties-1536dimensions-100documents.ts",
     "test/public/functional/vectorEmbeddingPolicy.spec.ts",
     "test/public/functional/computedProperties.spec.ts",
     "test/internal/unit/utils/nonStreamingOrderByPriorityQueue.spec.ts"
