Update to add build:test

--- a/sdk/monitor/monitor-opentelemetry-exporter/package.json
+++ b/sdk/monitor/monitor-opentelemetry-exporter/package.json
@@ -23,9 +23,10 @@
     "lint:fix": "eslint package.json api-extractor.json src test --fix --fix-type [problem,suggestion]",
     "pack": "npm pack 2>&1",
     "report": "nyc report --reporter=json",
-    "test": "npm run clean && npm run build:test && npm run unit-test",
+    "test": "npm run clean && npm run build:test",
     "test-opentelemetry-versions": "node test-opentelemetry-versions.js 2>&1",
     "test:browser": "npm run unit-test:browser",
+    "build:test": "npm run build && npm run unit-test:node",
     "test:node": "npm run clean && npm run build:test && npm run unit-test:node",
     "unit-test": "npm run unit-test:node && npm run unit-test:browser",
     "unit-test:browser": "echo skipped",
