--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,5 +37,8 @@
     "**/test-browser/*": true
   },
   "typescript.tsdk": "./sdk/core/core-rest-pipeline/node_modules/typescript/lib",
-  "vitest.vitestPackagePath": "sdk/core/core-rest-pipeline/node_modules/vitest/package.json"
+  "vitest.vitestPackagePath": "common/tools/dev-tool/node_modules/vitest/package.json",
+  "vitest.experimentalStaticAstCollect": true,
+  "vitest.configSearchPatternExclude": "{**/node_modules/**,**/.*/**,**/*.d.ts,eng/**,samples/**}",
+  "vitest.nodeEnv": {}
 }
