--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,5 +36,9 @@
     "**/*.d.ts": true,
     "**/test-browser/*": true
   },
-  "typescript.tsdk": "./sdk/core/core-rest-pipeline/node_modules/typescript/lib"
+  "typescript.tsdk": "./sdk/core/core-rest-pipeline/node_modules/typescript/lib",
+  "vitest.vitestPackagePath": "common/tools/dev-tool/node_modules/vitest/package.json",
+  "vitest.experimentalStaticAstCollect": true,
+  "vitest.configSearchPatternExclude": "{**/node_modules/**,**/.*/**,**/*.d.ts,eng/**,samples/**}",
+  "vitest.nodeEnv": {}
 }
