--- a/eng/common/pipelines/templates/jobs/generate-job-matrix.yml
+++ b/eng/common/pipelines/templates/jobs/generate-job-matrix.yml
@@ -48,6 +48,7 @@ parameters:
 - name: PRMatrixSetting
   type: string
   default: 'ArtifactPackageNames'
+# Mappings to OS name required at template compile time by 1es pipeline templates
 - name: Pools
   type: object
   default:
@@ -124,7 +125,6 @@ jobs:
       # Not currently not hardcoded, so not doing the needful and populating this folder before we hit this step will result in generation errors.
     - ${{ else }}:
       - ${{ each pool in parameters.Pools }}:
-
         - pwsh: |
             # dump the conglomerated CI matrix
             '${{ convertToJson(parameters.MatrixConfigs) }}' | Set-Content matrix.json
