--- a/sdk/face/ai-vision-face-rest/tsp-location.yaml
+++ b/sdk/face/ai-vision-face-rest/tsp-location.yaml
@@ -1,4 +1,4 @@
 directory: specification/ai/Face
 commit: 1d2253d1e221541cf05ae5d0dd95bd28c0846238
-repo: ../azure-rest-api-specs
-additionalDirectories: 
+repo: Azure/azure-rest-api-specs
+additionalDirectories:
