--- a/sdk/monitor/monitor-ingestion/tsconfig.json
+++ b/sdk/monitor/monitor-ingestion/tsconfig.json
@@ -2,22 +2,12 @@
   "extends": "../../../tsconfig",
   "compilerOptions": {
     "paths": {
-      "@azure/monitor-ingestion": [
-        "./src/index"
-      ]
+      "@azure/monitor-ingestion": ["./src/index"]
     },
-    "lib": [
-      "DOM"
-    ],
+    "lib": ["DOM"],
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "rootDir": "."
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.mts",
-    "src/**/*.cts",
-    "samples-dev/**/*.ts",
-    "test/**/*.ts"
-  ]
+  "include": ["src/**/*.ts", "src/**/*.mts", "src/**/*.cts", "samples-dev/**/*.ts", "test/**/*.ts"]
 }
