fix client type issues and improve tests

--- a/sdk/web-pubsub/web-pubsub/test.env
+++ b/sdk/web-pubsub/web-pubsub/test.env
@@ -4,6 +4,8 @@ WPS_CONNECTION_STRING="<connection string from the portal>"
 WPS_API_KEY="<api-key>"
 WPS_ENDPOINT="<endpoint>"
 WPS_REVERSE_PROXY_ENDPOINT="<reverse-proxy-endpoint>"
+WPS_SOCKETIO_ENDPOINT=
+WPS_SOCKETIO_CONNECTION_STRING=Endpoint=
 
 # Used to authenticate using Azure AD as a service principal for role-based
 # authentication.
