--- a/sdk/maps/maps-timezone-rest/package.json
+++ b/sdk/maps/maps-timezone-rest/package.json
@@ -61,7 +61,7 @@
   "sideEffects": false,
   "autoPublish": false,
   "dependencies": {
-    "@azure-rest/core-client": "1.0.0-beta.10",
+    "@azure-rest/core-client": "2.3.1",
     "@azure/core-auth": "^1.3.0",
     "@azure/core-rest-pipeline": "^1.8.0",
     "@azure/core-util": "~1.9.2",
