--- a/eng/pipelines/templates/steps/npm-release-task.yml
+++ b/eng/pipelines/templates/steps/npm-release-task.yml
@@ -19,7 +19,7 @@ steps:
         $packageName = $pkg.Name
         $packageVersion = $pkg.Version
         $packageProps = npm view $packageName -json | ConvertFrom-Json
-        $originalTags = $packageProps.'dist-tags'" | ConvertTo-Json -Compress
+        $originalTags = $packageProps.'dist-tags' | ConvertTo-Json -Compress
         echo "##vso[task.setvariable variable=OriginalTags]$originalTags
         echo "##vso[task.setvariable variable=IntendedTagVersion]$packageVersion
         Remove-Item -Force -Recurse $tempDir
