--- a/eng/pipelines/templates/jobs/ci.yml
+++ b/eng/pipelines/templates/jobs/ci.yml
@@ -74,7 +74,10 @@ jobs:
           MatrixConfigs: ${{ parameters.MatrixConfigs }}
           MatrixFilters: ${{ parameters.MatrixFilters }}
           MatrixReplace: ${{ parameters.MatrixReplace }}
-          SparseCheckoutPaths: [ "sdk/", ".vscode"]
+          ${{ if eq(parameters.ServiceDirectory, 'auto') }}:
+            SparseCheckoutPaths: [ "**/package.json", "**/ci.yml"]
+          ${{ else }}:
+            SparseCheckoutPaths: [ "sdk/", ".vscode"]
           CloudConfig:
             Cloud: Public
           AdditionalParameters:
