--- a/sdk/synapse/synapse-access-control-rest/package.json
+++ b/sdk/synapse/synapse-access-control-rest/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@azure-rest/core-client": "^1.0.0",
     "@azure/core-auth": "^1.3.0",
-    "@azure/core-paging": "^1.2.0",
+    "@azure/core-paging": "^1.5.0",
     "@azure/core-rest-pipeline": "^1.3.0",
     "tslib": "^2.2.0"
   },
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@azure-tools/test-credential": "^1.0.0",
     "@azure-tools/test-recorder": "^3.0.0",
+    "@azure/logger": "^1.0.0",
     "@azure/core-util": "^1.6.1",
     "@azure/dev-tool": "^1.0.0",
     "@azure/eslint-plugin-azure-sdk": "^3.0.0",
