tar file location

--- a/eng/pipelines/templates/steps/npm-release-task.yml
+++ b/eng/pipelines/templates/steps/npm-release-task.yml
@@ -11,7 +11,7 @@ steps:
   - ${{ if eq(parameters.Registry, 'https://registry.npmjs.org/') }}:
     - pwsh: |
         Set-PSDebug -Trace 1
-        $tarFile = (Get-ChildItem -Path "${{parameters.Artifact.name}}*.tgz")?.Name
+        $tarFile = (Get-ChildItem -Path "${{parameters.PathToArtifacts}}/${{parameters.Artifact.name}}/*.tgz")?.Name
         $tempDir = "$(System.DefaultWorkingDirectory)/temp_decompress"
         New-Item -ItemType Directory -Force -Path $tempDir
         tar -xzf $tarFile -C $tempDir
