json object as parameter

--- a/eng/pipelines/templates/steps/npm-release-task.yml
+++ b/eng/pipelines/templates/steps/npm-release-task.yml
@@ -48,7 +48,7 @@ steps:
       inputs:
         targetType: filePath
         filePath: eng/scripts/verify-npm-tags.ps1
-        arguments: -pathToArtifacts ${{parameters.PathToArtifacts}} -originalDistTags $(OriginalTags) -intendedTag ${{parameters.Tag}} -intendedTagVersion $(IntendedTagVersion)
+        arguments: -pathToArtifacts ${{parameters.PathToArtifacts}} -originalDistTags '$(OriginalTags)' -intendedTag ${{parameters.Tag}} -intendedTagVersion $(IntendedTagVersion)
         pwsh: true
 
     - ${{ if ne(parameters.AdditionalTag, '') }}:
