--- a/sdk/maps/maps-weather-rest/package.json
+++ b/sdk/maps/maps-weather-rest/package.json
@@ -65,7 +65,8 @@
     "@azure-rest/core-client": "^1.0.0",
     "@azure/core-rest-pipeline": "^1.8.0",
     "@azure/maps-common": "1.0.0-beta.2",
-    "tslib": "^2.2.0"
+    "tslib": "^2.2.0",
+    "@azure/logger": "1.1.4"
   },
   "devDependencies": {
     "@azure-tools/test-utils": "^1.0.1",
