--- a/eng/pipelines/templates/steps/npm-release-task.yml
+++ b/eng/pipelines/templates/steps/npm-release-task.yml
@@ -20,9 +20,8 @@ steps:
         $packageVersion = $pkg.Version
         $packageProps = npm view $packageName -json | ConvertFrom-Json
         $originalTags = $packageProps.'dist-tags' | ConvertTo-Json -Compress
-        echo "##vso[task.setvariable variable=OriginalTags]$originalTags
-        echo "##vso[task.setvariable variable=IntendedTagVersion]$packageVersion
-
+        echo "##vso[task.setvariable variable=OriginalTags]$originalTags"
+        echo "##vso[task.setvariable variable=IntendedTagVersion]$packageVersion"
         Write-Host "PackageProps: $packageProps"
         Write-Host "packageName: $packageName"
         Write-Host "originalTags: $originalTags"
