--- a/sdk/eventhub/event-hubs/package.json
+++ b/sdk/eventhub/event-hubs/package.json
@@ -56,7 +56,7 @@
     "format": "dev-tool run vendored prettier --write --config ../../../prettier.config.cjs --ignore-path ../../../.prettierignore \"src/**/*.{ts,cts,mts}\" \"test/**/*.{ts,cts,mts}\" \"samples-dev/**/*.{ts,cts,mts}\" \"*.{js,cjs,mjs,json}\"",
     "generate-certs": "tsx ./scripts/generateCerts.mts",
     "integration-test": "npm run integration-test:node && npm run integration-test:browser",
-    "integration-test:browser": "dev-tool run build-package && dev-tool run build-test && cross-env TEST_MODE=live dev-tool run test:vitest --browser --no-test-proxy",
+    "integration-test:browser": "dev-tool run build-package && dev-tool run build-test && dev-tool run vendored cross-env TEST_MODE=live dev-tool run test:vitest --browser --no-test-proxy",
     "integration-test:node": "dev-tool run vendored cross-env TEST_MODE=live npm run vitest:node",
     "lint": "dev-tool run vendored eslint package.json api-extractor.json src test README.md",
     "lint:fix": "dev-tool run vendored eslint package.json api-extractor.json src test README.md --fix --fix-type [problem,suggestion]",
