--- a/sdk/storage/storage-blob-changefeed/package.json
+++ b/sdk/storage/storage-blob-changefeed/package.json
@@ -78,7 +78,7 @@
     "@azure/core-rest-pipeline": "workspace:*",
     "@azure/core-tracing": "workspace:*",
     "@azure/logger": "workspace:*",
-    "@azure/storage-blob": "^12.23.0-beta.1",
+    "@azure/storage-blob": "workspace:*",
     "events": "^3.0.0",
     "tslib": "catalog:"
   },
@@ -92,7 +92,6 @@
     "@types/node": "catalog:",
     "@types/sinon": "catalog:legacy",
     "chai": "catalog:legacy",
-    "cross-env": "catalog:legacy",
     "dotenv": "catalog:",
     "es6-promise": "^4.2.5",
     "eslint": "catalog:",
