--- a/sdk/apicenter/arm-apicenter/package.json
+++ b/sdk/apicenter/arm-apicenter/package.json
@@ -16,24 +16,30 @@
     "@azure/core-rest-pipeline": "^1.14.0",
     "tslib": "^2.2.0"
   },
-  "keywords": ["node", "azure", "typescript", "browser", "isomorphic"],
+  "keywords": [
+    "node",
+    "azure",
+    "typescript",
+    "browser",
+    "isomorphic"
+  ],
   "license": "MIT",
   "main": "./dist/index.js",
   "module": "./dist-esm/src/index.js",
   "types": "./types/arm-apicenter.d.ts",
   "devDependencies": {
-    "@azure-tools/test-credential": "^1.0.0",
-    "@azure-tools/test-recorder": "^3.0.0",
+    "@azure-tools/test-credential": "^2.0.0",
+    "@azure-tools/test-recorder": "^4.1.0",
+    "@azure-tools/test-utils-vitest": "^1.0.0",
     "@azure/dev-tool": "^1.0.0",
     "@azure/identity": "^4.0.1",
-    "@types/chai": "^4.2.8",
-    "@types/mocha": "^10.0.0",
     "@types/node": "^18.0.0",
-    "chai": "^4.2.0",
+    "@vitest/browser": "^2.1.4",
+    "@vitest/coverage-istanbul": "^2.1.4",
     "dotenv": "^16.0.0",
-    "mocha": "^10.0.0",
-    "ts-node": "^10.0.0",
-    "typescript": "~5.6.2"
+    "playwright": "^1.48.2",
+    "typescript": "~5.6.2",
+    "vitest": "^2.1.4"
   },
   "repository": {
     "type": "git",
@@ -43,24 +49,12 @@
     "url": "https://github.com/Azure/azure-sdk-for-js/issues"
   },
   "files": [
-    "dist/**/*.js",
-    "dist/**/*.js.map",
-    "dist/**/*.d.ts",
-    "dist/**/*.d.ts.map",
-    "dist-esm/**/*.js",
-    "dist-esm/**/*.js.map",
-    "dist-esm/**/*.d.ts",
-    "dist-esm/**/*.d.ts.map",
-    "src/**/*.ts",
+    "dist/",
     "README.md",
-    "LICENSE",
-    "tsconfig.json",
-    "review/*",
-    "CHANGELOG.md",
-    "types/*"
+    "LICENSE"
   ],
   "scripts": {
-    "build": "npm run clean && tsc && dev-tool run bundle && npm run minify && dev-tool run vendored mkdirp ./review && npm run extract-api",
+    "build": "npm run clean && dev-tool run build-package && dev-tool run extract-api",
     "build:browser": "echo skipped",
     "build:node": "echo skipped",
     "build:samples": "echo skipped.",
@@ -81,8 +75,8 @@
     "test:browser": "echo skipped",
     "test:node": "echo skipped",
     "unit-test": "npm run unit-test:node && npm run unit-test:browser",
-    "unit-test:browser": "echo skipped",
-    "unit-test:node": "dev-tool run vendored cross-env TEST_MODE=playback npm run integration-test:node",
+    "unit-test:browser": "npm run clean && dev-tool run build-package && dev-tool run build-test && dev-tool run test:vitest --browser",
+    "unit-test:node": "dev-tool run test:vitest",
     "update-snippets": "echo skipped"
   },
   "sideEffects": false,
@@ -99,8 +93,27 @@
   "homepage": "https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/apicenter/arm-apicenter",
   "//sampleConfiguration": {
     "productName": "",
-    "productSlugs": ["azure"],
+    "productSlugs": [
+      "azure"
+    ],
     "disableDocsMs": true,
     "apiRefLink": "https://docs.microsoft.com/javascript/api/@azure/arm-apicenter?view=azure-node-preview"
-  }
+  },
+  "type": "module",
+  "tshy": {
+    "exports": {
+      "./package.json": "./package.json",
+      ".": "./src/index.ts"
+    },
+    "dialects": [
+      "esm",
+      "commonjs"
+    ],
+    "esmDialects": [
+      "browser",
+      "react-native"
+    ],
+    "selfLink": false
+  },
+  "browser": "./dist/browser/index.js"
 }
